# NoirLedgerHash

./: CMakeLists.txt  LICENSE  README.md  SECURITY.md
cmake_scripts/: generate_cl_header.cmake
src/: main.cpp
src/NoirLedger_hash/: NoirLedger_hash.cl  NoirLedger_hash.cpp  NoirLedger_hash.cu  NoirLedger_hash.h  debug_flags.cpp  debug_flags.h
src/blake3_custom/: blake3_compress.cpp  blake3_core.cpp  blake3_custom.h  blake3_internal.h
src/gpu/: NoirLedger_gpu_cl.cpp  NoirLedger_gpu_cl.h  NoirLedger_gpu_cuda.cpp  NoirLedger_gpu_cuda.h  NoirLedger_gpu_cuda_wrapper.cu  NoirLedger_gpu_cuda_wrapper.h
src/tests/: unit_tests.cpp
